# gossip

gossip-ed/: AUTHORS  ChangeLog  Makefile.am  README  TODO  UISPEC  autogen.sh  canonicalize-prefixes  canvas.scm  configure.in  gossip-ed-0.0.spec  gossip-ed-mockup  test.scm  x.scm
gossip-ed/doc/: Makefile.am  fix-html  mockup-tutorial.texi
gossip-ed/libgossipcanvas/: Makefile.am  canvas.defs  gossip-art.c  gossip-art.h  gossip-canvas-extra-glue.c  gossip-canvas-grid.c  gossip-canvas-grid.h  gossip-canvas-line.c  gossip-canvas-line.h  gossip-canvas-polygon.c  gossip-canvas-polygon.h  gossip-canvas-rect-ellipse.c  gossip-canvas-rect-ellipse.h  gossip-canvas-text.c  gossip-canvas-text.h  gossip-canvas-util.c  gossip-canvas-util.h  gossip-canvas.c  gossip-canvas.h  make_canvas_converter  testcanvas.c
gossip-lib-fec/: Makefile  README  bch_dec.cc  bch_enc.cc  conv27.cc  conv2_32.cc  dest_int.cc  fano.cc  fec_test.sim  golay_dec.cc  golay_enc.cc  hamming7dec.cc  hamming7enc.cc  mkinstalldirs  source_int.cc  viterbi27.cc  viterbi27.h
gossip-lib-ipl/: Makefile  README  complex-imag.cc  complex-real.cc  double-to-complex.cc  mini-exec.cc  mkinstalldirs  rand-uniform.cc  rng-double.c  rng-double.h  scheme-exec.cc
gossip-lib-matlab/: ChangeLog  INSTALL  Makefile  README  configure  libmateng.cc  libmateng.h  matlab.cc  matlabengine.c  mkinstalldirs
gossip-lib-misc/: INSTALL  Makefile  README  awgn.cc  b2b.cc  mkinstalldirs
gossip-lib-radio/: Makefile  README  configure  dds.cc  mkinstalldirs  osc.cc  vco.cc
gossip-lib-skel/: INSTALL  Makefile  README  bar.block  foo.cc  mkinstalldirs
gossip-sim/: ChangeLog  INSTALL  Makefile.am  NEWS  NOTES  README  TODO  autogen.sh  configure.in  gossip-run  gossip-sim-0.8.spec  sourceforge
gossip-sim/debian/: changelog  control  copyright  examples  files  info  postinst.debhelper  prerm.debhelper  rules  substvars
gossip-sim/doc/: Makefile.am  example-1.fig  example-1.txt  example-2.fig  example-2.txt  extract-index  gossip-lib-example.texi  gossip-sim.texi  sim-tng.texi  texinfo.tex
gossip-sim/example/: Makefile.am  adder.cc  destination.cc  example-1.sim  example-2.sim  example-3.sim  example-4.sim  source.cc
gossip-sim/example/cdma/: Makefile.am  add.cc  awgn.cc  block-ber.cc  cdma.sim  demodulate.cc  despread.cc  invert.cc  modulate.cc  power-control.cc  radd.cc  random-bits.cc  rawgn.cc  rcdma.sim  rdemodulate.cc  rdespread.cc  rmodulate.cc  rspread.cc  spread.cc
gossip-sim/gossip/: Makefile.am  sim.h
gossip-sim/scm/: Makefile.am  sim-builtin.scm  sim-config.scm.in  sim-doc.scm  sim-library.scm  sim-net.scm  sim-options.scm  sim-run.scm  sim-schedule.scm  sim-util.scm  sim.scm
gossip-sim/src/: Makefile.am  comp.cc  dynblock.cc  dynblock.h  dyncomp.cc  dyncomp.h  dynlink.cc  dynlink.h  dynsim.cc  dynsim.h  generics.cc  init.cc  prototype.cc  signal-pipe.cc  signal-pipe.h
gossip-sim/test/: Makefile.am  dest.cc  fork.cc  hier-1.block  hier-2.block  source.cc  thru.cc
gossip-site/: ANNOUNCE  Makefile  README  gossip-bw.fig  gossip-color.fig  gossip-ed.html  gossip-libs.html  gossip-sim.html  gossip-vhdl.html  history.html  index.html  install.html
