gossipdir = $(datadir)/guile/gossip

gossip_DATA = sim.scm				\
              sim-util.scm			\
              sim-net.scm			\
              sim-library.scm			\
              sim-schedule.scm			\
	      sim-run.scm			\
              sim-config.scm			\
              sim-options.scm			\
              sim-builtin.scm			\
              sim-doc.scm

EXTRA_DIST = $(gossip_DATA)
